created bank_web_hook and tailwind fixes and changes in schema

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "exports": {
     "./*": "./src/*.tsx",
-    "./globals.css": "./globals.css"
+    "./style.css": "./style.css"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
