--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,6 +6,9 @@
   "exports": {
     ".": "./src/index.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.19.2",
-    "prisma": "^6.19.2"
+    "bcrypt": "^6.0.0",
+    "prisma": "^6.19.2",
+    "ts-node": "^10.9.2"
   }
 }
