--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
       
       - name: Install Dependencies
         run: npm install
+
+      - name: Generate prisma client
+        run: npm run db:genrate
       
       - name: Run Build
         run: npm run build
