--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "db:generate": "cd packages/db && npx prisma generate && cd ../../",
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
